--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,3 +7,9 @@ AllCops:
     - bin/**/*
 Rails:
   Enabled: true
+Metrics/MethodLength:
+  Max: 25
+Metrics/BlockLength:
+  Max: 25
+  Exclude:
+    - spec/**/*
