--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,9 @@ AllCops:
     - bin/**/*
 Rails:
   Enabled: true
+Metrics/LineLength:
+  Exclude:
+    - db/**/*
 Metrics/MethodLength:
   Max: 25
 Metrics/BlockLength:
